Bug 113162 - FILEOPEN: Incorrect fontwork's height
Summary: FILEOPEN: Incorrect fontwork's height
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
5.4.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Szymon Kłos
URL:
Whiteboard: target:6.0.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks: PPT
  Show dependency treegraph
 
Reported: 2017-10-16 20:55 UTC by Xisco Faulí
Modified: 2020-05-30 07:19 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
sample (19.00 KB, application/vnd.ms-powerpoint)
2017-10-16 20:55 UTC, Xisco Faulí
Details
comparison MSO 2010 and LibreOffice 6.0 (28.03 KB, image/png)
2017-10-16 20:56 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2017-10-16 20:55:37 UTC
Created attachment 137021 [details]
sample

Steps to reproduce:
1. Open attached document

Observed behaviour: text's height should be equal to fontwork's height, but it's not

Reproduced in

Version: 6.0.0.0.alpha0+
Build ID: d4daf634cd9ce8d422d49669c324a2220eba54a9
CPU threads: 4; OS: Linux 4.10; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group
Comment 1 Xisco Faulí 2017-10-16 20:56:45 UTC
Created attachment 137022 [details]
comparison MSO 2010 and LibreOffice 6.0

[Bug found by office-interoperability-tools]
Comment 2 Xisco Faulí 2017-10-16 21:04:09 UTC
Actually the problem is: Height changes from 4.37 cms ( before ) to 1.04 cms ( after )
Comment 3 Xisco Faulí 2017-10-16 21:05:14 UTC
Regression introduced by:

author	Szymon Kłos <szymon.klos@collabora.com>	2017-06-19 13:32:16 (GMT)
committer	Andras Timar <andras.timar@collabora.com>	2017-06-28 20:38:49 (GMT)
commit d72e0cadceb0b43928a9b4f18d75c9d5d30afdda (patch)
tree 13a4359e82a473185c5130cda7aa4efbe822955d
parent 91c838a4c9d0d7a8438e2e76a3636dc67a6221bb (diff)
Watermark: tdf#91687 correct size in the .doc
Export:
* Watermarks saved using Writer were very small in the MSO.
  Export fUsegtextFStretch property in the Geometry Text
  Boolean Properties.
* tdf#91687: SnapRect contains size of Watermark after rotation.
  We have to export size without rotation.

Import:
* When import set height depending on used font and width.
  Text will keep the ratio. Remember the padding for export.

* added unit test
* introduced enum to avoid magic numbers for stretch and best fit
  properties.

Bisected with bibisect-linux64-6.0

Adding Cc: to Szymon Kłos
Comment 4 Commit Notification 2017-10-27 14:25:22 UTC
Szymon Kłos committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=cee6f65b0b03263b8706ae2797e07b67a0ccab89

tdf#113162 corect the size only for watermark 2

It will be available in 6.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Xisco Faulí 2017-10-29 20:38:13 UTC
Verified in

Version: 6.0.0.0.alpha1+
Build ID: fc4f2f1b0f8c286e9ae259c44fb249261a8ac47f
CPU threads: 4; OS: Linux 4.10; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group