tdf#113162 corect the size only for watermark 2

Change-Id: Id35d61084e034c7381c8e8016e50dd66aaf41d59